# lite_hrnet_tfk

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.py
lite_hrnet_tfk/: config.py  heads.py  layers.py  modules.py  net.py
lite_hrnet_tfk/modules/: __init__.py  base.py  lite.py  naive.py  stage.py
tests/: test_layers.py  test_modules.py  test_modules_lite.py  test_net.py  test_nets.py
