[tool.poetry]
name = "lite_hrnet_tfk"
version = "0.4.0"
description = "tensoflow.keras implementation of Lite-HRNet"
authors = ["Boris Zimka <zimka.b@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^3.2.3"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
