[tool.poetry]
name = "lite_hrnet_tfk"
version = "0.4.0"
description = "tensoflow.keras implementation of Lite-HRNet"
authors = ["Boris Zimka <zimka.b@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^3.2.3"
pylint = "^2.11.1"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lite_hrnet_tfk"
authors = [{name = "Boris Zimka", email = "zimka.b@ya.ru"}]
version = "0.4.0"
description = "tensoflow.keras implementation of Lite-HRNet"
