[tool.poetry]
name = "lite_hrnet_tfk"
version = "0.4.0"
description = "tensoflow.keras implementation of Lite-HRNet"
authors = ["Boris Zimka <zimka.b@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = { version = "^2.2", optional = true }
tensorflow-gpu = { version = "^2.2", optional = true }

[tool.poetry.extras]
tensorflow = ["tensorflow"]
tensorflow-gpu = ["tensorflow-gpu"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^3.2.3"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "lite_hrnet_tfk"
authors = [{name = "Boris Zimka", email = "zimka.b@ya.ru"}]
version = "0.4.0"
description = "tensoflow.keras implementation of Lite-HRNet"
